--- a/backend/package.json
+++ b/backend/package.json
@@ -12,21 +12,24 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "axios": "^1.13.5",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.3.1",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.2.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/express": "^4.17.21",
     "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.96",
+    "@types/node": "^20.11.30",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.17",
-    "typescript": "^5.4.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.0"
   }
 }
