--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.3.1",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
+    "lru-cache": "^11.2.6",
     "mongoose": "^9.2.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
@@ -24,7 +26,9 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lru-cache": "^7.10.9",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.11.30",
     "@types/passport": "^1.0.17",
